# bayes_social_network

./: .gitignore  environment.yml  pyproject.toml  readme.md
analysis/: metrics.py  tracker.py
configs/: simulation_config.py
core/: agent.py  environment.py
experiments/: baseline.py  parameter_sweep.py
network/: topology.py
notebooks/: 01_baseline_analysis.ipynb
utils/: math_utils.py
